# LearnGCGE

./: CMakeLists.txt  README.md
example/: usrParam.txt
gcge/app/: app_lapack.c
gcge/include/: ops.h  ops_eig_sol_gcg.h  range_eig_solve.h
gcge/src/: ops_eig_sol_gcg.c  ops_lin_sol.c  ops_multi_vec.c  range_eig_solve.c
src/: main.cpp
src/io/: mmio_eigen_result_io.cpp  mmio_eigen_result_io.h
src/solver/: count_eigen_num.cpp  gcge_solver.cpp
test/: CMakeLists.txt  test_slepc.cpp
